--- a/style.css
+++ b/style.css
@@ -3,22 +3,22 @@
 
 --root {
   /* ?Main background */
-  --Verydarkblue: hsl(233, 47%, 7%);
+  --Verydarkblue: #090b1a;
 
   /* ?Card background */
-  --Darkdesaturatedblue: hsl(244, 38%, 16%);
+  --Darkdesaturatedblue:#1b1938;
 
   /* ?Accent */
-  --Softviolet: hsl(277, 64%, 61%);
+  --Softviolet:#aa5cdb;
 
   /* *Main heading stats */
-  --White: hsl(0, 0%, 100%);
+  --White: #ffffff;
 
   /* *Main paragraph */
-  --Slightlytransparentwhite: hsla(0, 0%, 100%, 0.75);
+  --Slightlytransparentwhite: #ffffff;
 
   /* *Stat headings */
-  --Slightlytransparentwhite: hsla(0, 0%, 100%, 0.6);
+  --Slightlytransparentwhite: #ffffff;
 
   --Fontsize: 15px;
   --Inter: "Inter";
@@ -27,4 +27,8 @@
 
 img{
     max-width: 100%;
+}
+
+body{
+    background-color: var(--Verydarkblue);
 }
